Add ServerStorage path to project configuration
Configured the project to include a path mapping for ServerStorage, enabling scripts and assets to be organized under src/ServerStorage.

--- a/default.project.json
+++ b/default.project.json
@@ -8,6 +8,9 @@
     "ServerScriptService": {
       "$path": "src/ServerScriptService"
     },
+    "ServerStorage": {
+      "$path": "src/ServerStorage"
+    },
     "StarterPlayer": {
       "$path": "src/StarterPlayer"
     },
